force-app/main/default/objects/Transaction__c/fields/Initial_Closing_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Initial_Closing_Disclosure__c</fullName>
    <label>Initial Closing Disclosure</label>
    <type>Date</type>
</CustomField>