force-app/main/default/objects/Transaction__c/fields/Initial_Loan_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Initial_Loan_Estimate__c</fullName>
    <label>Initial Loan Estimate</label>
    <type>Date</type>
</CustomField>