force-app/main/default/objects/Transaction__c/fields/Insurance_Agent__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions (Insurance Agent)</relationshipLabel>
    <relationshipName>Transactions4</relationshipName>
    <type>Lookup</type>
</CustomField>