force-app/main/default/objects/Transaction__c/fields/Intro_Email_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Intro_Email_Due_Date__c</fullName>
    <description>Date that the processor must send the intro email, once a Transaction is in CLA status.</description>
    <label>Intro Email Due Date</label>
    <type>Date</type>
</CustomField>