force-app/main/default/objects/Transaction__c/fields/Intro_to_Listing_Agent__c.field-meta.xml
<CustomField>
    <fullName>Intro_to_Listing_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intro to Listing Agent</label>
    <type>Checkbox</type>
</CustomField>