force-app/main/default/objects/Transaction__c/fields/Investor_Site_Confirm_SF_Info__c.field-meta.xml
<CustomField>
    <fullName>Investor_Site_Confirm_SF_Info__c</fullName>
    <label>Investor Site, Confirm SF Info</label>
    <type>DateTime</type>
</CustomField>