force-app/main/default/objects/Transaction__c/fields/Last_Processing_Note__c.field-meta.xml
<CustomField>
    <fullName>Last_Processing_Note__c</fullName>
    <label>Last Processing Note</label>
    <type>DateTime</type>
</CustomField>