force-app/main/default/objects/Transaction__c/fields/Last_Processor_RC_Call__c.field-meta.xml
<CustomField>
    <fullName>Last_Processor_RC_Call__c</fullName>
    <label>Last Processor RC Call</label>
    <type>DateTime</type>
</CustomField>