force-app/main/default/objects/Transaction__c/fields/Last_Processor_RC_SMS__c.field-meta.xml
<CustomField>
    <fullName>Last_Processor_RC_SMS__c</fullName>
    <label>Last Processor RC SMS</label>
    <type>DateTime</type>
</CustomField>