force-app/main/default/objects/Transaction__c/fields/Lead_Notes_JSON__c.field-meta.xml
<CustomField>
    <fullName>Lead_Notes_JSON__c</fullName>
    <label>Lead Notes JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>