force-app/main/default/objects/Transaction__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>Lead source, mapped from lead object</description>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reach In Market Dialer</fullName>
            </value>
            <value>
                <fullName>Realtor Referral</fullName>
            </value>
            <value>
                <fullName>Past Client</fullName>
            </value>
            <value>
                <fullName>Personal Referral</fullName>
            </value>
            <value>
                <fullName>Nickley Listing Credit</fullName>
            </value>
            <value>
                <fullName>Previous Client Referral</fullName>
            </value>
            <value>
                <fullName>Google_Organic</fullName>
                <label>Google Organic</label>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
            <value>
                <fullName>Zillow</fullName>
            </value>
            <value>
                <fullName>Nickley ISA</fullName>
            </value>
            <value>
                <fullName>Tik Tok</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>VM Refinance</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Facebook - Landing Refi</fullName>
            </value>
            <value>
                <fullName>Facebook Text Quote</fullName>
            </value>
            <value>
                <fullName>Facebook Lead Ad</fullName>
            </value>
            <value>
                <fullName>Consumer Webinar</fullName>
            </value>
            <value>
                <fullName>Instagram-Linktree</fullName>
            </value>
            <value>
                <fullName>Facebook-Linktree</fullName>
            </value>
            <value>
                <fullName>Youtube-Linktree</fullName>
            </value>
            <value>
                <fullName>Tiktok-Linktree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>