force-app/main/default/objects/Transaction__c/fields/Lender_1st__c.field-meta.xml
<CustomField>
    <fullName>Lender_1st__c</fullName>
    <label>Lender</label>
    <length>100</length>
    <type>Text</type>
</CustomField>