force-app/main/default/objects/Transaction__c/fields/Lender_2nd__c.field-meta.xml
<CustomField>
    <fullName>Lender_2nd__c</fullName>
    <label>Lender (2nd)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>