force-app/main/default/objects/Transaction__c/fields/Lender_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Lender_Billing_City__c</fullName>
    <formula>IF( RecordType.Name == &apos;Brokered&apos;,
Lender_lookup__r.BillingCity,
&apos;Boca Raton&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lender Billing City</label>
    <type>Text</type>
</CustomField>