force-app/main/default/objects/Transaction__c/fields/Lender_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Lender_Billing_State__c</fullName>
    <formula>IF( RecordType.Name == &apos;Brokered&apos;,
Lender_lookup__r.BillingState,
&apos;Florida&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lender Billing State</label>
    <type>Text</type>
</CustomField>