force-app/main/default/objects/Transaction__c/fields/Lender_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Lender_Billing_Street__c</fullName>
    <formula>IF( RecordType.Name == &apos;Brokered&apos;,
Lender_lookup__r.BillingStreet,
&apos;327 Plaza Real Ste 215&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lender Billing Street</label>
    <type>Text</type>
</CustomField>