force-app/main/default/objects/Transaction__c/fields/Lender_Billing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Lender_Billing_Zip__c</fullName>
    <formula>IF( RecordType.Name == &apos;Brokered&apos;,
Lender_lookup__r.BillingPostalCode,
&apos;33432&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lender Billing Zip</label>
    <type>Text</type>
</CustomField>