force-app/main/default/objects/Transaction__c/fields/Lender_Credit__c.field-meta.xml
<CustomField>
    <fullName>Lender_Credit__c</fullName>
    <inlineHelpText>Any Lender Credit given to borrowers should be reflected as a positive number.</inlineHelpText>
    <label>Lender Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>