force-app/main/default/objects/Transaction__c/fields/Lender_lookup__c.field-meta.xml
<CustomField>
    <fullName>Lender_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lender</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Investor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions (Lender)</relationshipLabel>
    <relationshipName>Transactions_Lender</relationshipName>
    <type>Lookup</type>
</CustomField>