force-app/main/default/objects/Transaction__c/fields/Lender_Name__c.field-meta.xml
<CustomField>
    <fullName>Lender_Name__c</fullName>
    <formula>IF( RecordType.Name == &apos;Brokered&apos;, 
Lender_lookup__r.Name,
&apos;Reach Home Loans&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lender Name</label>
    <type>Text</type>
</CustomField>