force-app/main/default/objects/Transaction__c/fields/Letter_Completed__c.field-meta.xml
<CustomField>
    <fullName>Letter_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will update through Process Builder when the processor marks a task&apos;s status as Completed.</description>
    <label>Letter Completed</label>
    <type>Checkbox</type>
</CustomField>