force-app/main/default/objects/Transaction__c/fields/Lien_Position__c.field-meta.xml
<CustomField>
    <fullName>Lien_Position__c</fullName>
    <label>Lien Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>