force-app/main/default/objects/Transaction__c/fields/Listing_Agent_TC__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_TC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing Agent TC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>