force-app/main/default/objects/Transaction__c/fields/Listing_Agents_Phone__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agents_Phone__c</fullName>
    <formula>Realtor_Listing_Agent__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Agents Phone</label>
    <type>Text</type>
</CustomField>