force-app/main/default/objects/Transaction__c/fields/LO__c.field-meta.xml
<CustomField>
    <fullName>LO__c</fullName>
    <label>LO</label>
    <length>25</length>
    <type>Text</type>
</CustomField>