force-app/main/default/objects/Transaction__c/fields/Loan_1st_TD__c.field-meta.xml
<CustomField>
    <fullName>Loan_1st_TD__c</fullName>
    <label>Loan #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>