force-app/main/default/objects/Transaction__c/fields/Loan_2nd_TD__c.field-meta.xml
<CustomField>
    <fullName>Loan_2nd_TD__c</fullName>
    <label>Loan # (2nd TD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>