force-app/main/default/objects/Transaction__c/fields/Loan_Amount_1st__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_1st__c</fullName>
    <label>Total Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>