force-app/main/default/objects/Transaction__c/fields/Loan_Amount_2nd__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_2nd__c</fullName>
    <label>Loan Amount (2nd)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>