force-app/main/default/objects/Transaction__c/fields/Loan_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Date__c</fullName>
    <label>Loan Application Date</label>
    <type>Date</type>
</CustomField>