force-app/main/default/objects/Transaction__c/fields/Loan_Commit_Alert__c.field-meta.xml
<CustomField>
    <fullName>Loan_Commit_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Commit Alert</label>
    <type>Checkbox</type>
</CustomField>