force-app/main/default/objects/Transaction__c/fields/Loan_Commitment_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Commitment_Date__c</fullName>
    <label>Loan Commitment Date</label>
    <type>Date</type>
</CustomField>