force-app/main/default/objects/Transaction__c/fields/Loan_Conditionally_Approved__c.field-meta.xml
<CustomField>
    <fullName>Loan_Conditionally_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Conditionally Approved</label>
    <type>Checkbox</type>
</CustomField>