force-app/main/default/objects/Transaction__c/fields/Loan_Conditionally_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Conditionally_Approved_Date__c</fullName>
    <label>Loan Conditionally Approved Date</label>
    <type>Date</type>
</CustomField>