force-app/main/default/objects/Transaction__c/fields/Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Number__c</fullName>
    <description>uwm repository query use for uwm insights</description>
    <label>Loan Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>