force-app/main/default/objects/Transaction__c/fields/Loan_Officer__c.field-meta.xml
<CustomField>
    <fullName>Loan_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Transactions (Loan Officer)</relationshipLabel>
    <relationshipName>Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>