force-app/main/default/objects/Transaction__c/fields/Loan_Product_1st_TD__c.field-meta.xml
<CustomField>
    <fullName>Loan_Product_1st_TD__c</fullName>
    <label>Loan Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>