force-app/main/default/objects/Transaction__c/fields/Loan_Program_1st__c.field-meta.xml
<CustomField>
    <fullName>Loan_Program_1st__c</fullName>
    <label>Loan Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conventional Fixed</fullName>
            </value>
            <value>
                <fullName>Conventional ARM</fullName>
            </value>
            <value>
                <fullName>HomeReady / Home Possible</fullName>
            </value>
            <value>
                <fullName>High Balance Conventional</fullName>
            </value>
            <value>
                <fullName>Jumbo Fixed</fullName>
            </value>
            <value>
                <fullName>Jumbo ARM</fullName>
            </value>
            <value>
                <fullName>FHA Standard</fullName>
            </value>
            <value>
                <fullName>FHA Streamline</fullName>
            </value>
            <value>
                <fullName>FHA 203(b)</fullName>
            </value>
            <value>
                <fullName>FHA 203(k) Full</fullName>
            </value>
            <value>
                <fullName>FHA 203(k) Streamline</fullName>
            </value>
            <value>
                <fullName>VA Purchase</fullName>
            </value>
            <value>
                <fullName>VA IRRRL</fullName>
            </value>
            <value>
                <fullName>USDA Guaranteed</fullName>
            </value>
            <value>
                <fullName>Bank Statement</fullName>
            </value>
            <value>
                <fullName>DSCR</fullName>
            </value>
            <value>
                <fullName>Asset Depletion</fullName>
            </value>
            <value>
                <fullName>Interest Only</fullName>
            </value>
            <value>
                <fullName>Foreign National</fullName>
            </value>
            <value>
                <fullName>ITIN</fullName>
            </value>
            <value>
                <fullName>Community Mortgage</fullName>
            </value>
            <value>
                <fullName>Rate &amp; Term Refi</fullName>
            </value>
            <value>
                <fullName>Cash-Out Refi</fullName>
            </value>
            <value>
                <fullName>HELOC</fullName>
            </value>
            <value>
                <fullName>Closed-End Second</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>