force-app/main/default/objects/Transaction__c/fields/Loan_Type_1st_TD__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type_1st_TD__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conventional</fullName>
                <label>CONV</label>
            </value>
            <value>
                <fullName>FHA</fullName>
            </value>
            <value>
                <fullName>Jumbo</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>NonQM</fullName>
            </value>
            <value>
                <fullName>HELOC</fullName>
            </value>
            <value>
                <fullName>USDA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>DPA 2nd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>