force-app/main/default/objects/Transaction__c/fields/Loan_Type_2nd_TD__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type_2nd_TD__c</fullName>
    <label>Loan Type 2nd TD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>Non-QM</fullName>
            </value>
            <value>
                <fullName>HELOC</fullName>
            </value>
            <value>
                <fullName>DPA 2nd</fullName>
            </value>
            <value>
                <fullName>FHA</fullName>
                <isActive>false</isActive>
                <label>FHA</label>
            </value>
            <value>
                <fullName>FarmersHomeAdministration</fullName>
                <isActive>false</isActive>
                <label>FarmersHomeAdministration</label>
            </value>
            <value>
                <fullName>Jumbo</fullName>
                <isActive>false</isActive>
                <label>Jumbo</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>VA</fullName>
                <isActive>false</isActive>
                <label>VA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>