force-app/main/default/objects/Transaction__c/fields/Lock_Date_1st__c.field-meta.xml
<CustomField>
    <fullName>Lock_Date_1st__c</fullName>
    <label>Lock Date (1st)</label>
    <type>Date</type>
</CustomField>