force-app/main/default/objects/Transaction__c/fields/Lock_Date_2nd__c.field-meta.xml
<CustomField>
    <fullName>Lock_Date_2nd__c</fullName>
    <label>Lock Date (2nd)</label>
    <type>Date</type>
</CustomField>