force-app/main/default/objects/Transaction__c/fields/Lock_Exp_Date_1st_TD__c.field-meta.xml
<CustomField>
    <fullName>Lock_Exp_Date_1st_TD__c</fullName>
    <label>Lock Exp. Date</label>
    <type>Date</type>
</CustomField>