force-app/main/default/objects/Transaction__c/fields/Lock_Expiring__c.field-meta.xml
<CustomField>
    <fullName>Lock_Expiring__c</fullName>
    <formula>IF(Rate_Lock_Exp_Date__c == TODAY(), IMAGE(&quot;/resource/1677794325000/RedCircleIndicator?&quot;, &quot;red&quot;, 40, 40), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lock Expiring?</label>
    <type>Text</type>
</CustomField>