force-app/main/default/objects/Transaction__c/fields/Lock_Status__c.field-meta.xml
<CustomField>
    <fullName>Lock_Status__c</fullName>
    <label>Lock Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>