force-app/main/default/objects/Transaction__c/fields/LP2_Required_Fields_Not_Populated__c.field-meta.xml
<CustomField>
    <fullName>LP2_Required_Fields_Not_Populated__c</fullName>
    <formula>OR(
ISBLANK(TEXT(Loan_Type_2nd_TD__c)),
ISBLANK(Loan_2nd_TD__c),
ISBLANK(TEXT(Doc_Type_2nd_TD__c)),
ISBLANK(Loan_Amount_2nd__c),
ISBLANK(Term_2nd__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LP2 Required Fields Not Populated</label>
    <type>Checkbox</type>
</CustomField>