force-app/main/default/objects/Transaction__c/fields/Management_Note__c.field-meta.xml
<CustomField>
    <fullName>Management_Note__c</fullName>
    <label>Management Note</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>