force-app/main/default/objects/Transaction__c/fields/Management_Note_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Management_Note_Date_Time__c</fullName>
    <label>Management Note Date/Time</label>
    <type>DateTime</type>
</CustomField>