force-app/main/default/objects/Transaction__c/fields/Management_Notes__c.field-meta.xml
<CustomField>
    <fullName>Management_Notes__c</fullName>
    <description>This field is for Management to enter notes on the transaction.  It is only visible to Adam and Brandon.</description>
    <label>Management Notes</label>
    <type>TextArea</type>
</CustomField>