force-app/main/default/objects/Transaction__c/fields/Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Manager_Notes__c</fullName>
    <label>Closing Notes for Closers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>