force-app/main/default/objects/Transaction__c/fields/MCC__c.field-meta.xml
<CustomField>
    <fullName>MCC__c</fullName>
    <label>MCC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>