force-app/main/default/objects/Transaction__c/fields/MERS_Activated__c.field-meta.xml
<CustomField>
    <fullName>MERS_Activated__c</fullName>
    <label>MERS Activated</label>
    <type>Date</type>
</CustomField>