force-app/main/default/objects/Transaction__c/fields/MERS_Fee__c.field-meta.xml
<CustomField>
    <fullName>MERS_Fee__c</fullName>
    <label>MERS Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>