force-app/main/default/objects/Transaction__c/fields/MERS_Min__c.field-meta.xml
<CustomField>
    <fullName>MERS_Min__c</fullName>
    <label>MERS Min</label>
    <length>255</length>
    <type>Text</type>
</CustomField>