force-app/main/default/objects/Transaction__c/fields/MERS_Registration_Complete__c.field-meta.xml
<CustomField>
    <fullName>MERS_Registration_Complete__c</fullName>
    <label>MERS Registration Complete</label>
    <type>Date</type>
</CustomField>