force-app/main/default/objects/Transaction__c/fields/MERS_Transfer_to_Investor__c.field-meta.xml
<CustomField>
    <fullName>MERS_Transfer_to_Investor__c</fullName>
    <label>MERS Transfer to Investor</label>
    <type>Date</type>
</CustomField>