force-app/main/default/objects/Transaction__c/fields/MERSUploadedActivated__c.field-meta.xml
<CustomField>
    <fullName>MERSUploadedActivated__c</fullName>
    <label>MERS Uploaded/Activated</label>
    <type>Date</type>
</CustomField>