force-app/main/default/objects/Transaction__c/fields/Meta_Adset_ID__c.field-meta.xml
<CustomField>
    <fullName>Meta_Adset_ID__c</fullName>
    <label>Meta Adset ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>