force-app/main/default/objects/Transaction__c/fields/Meta_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Meta_Campaign_ID__c</fullName>
    <label>Meta Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>