force-app/main/default/objects/Transaction__c/fields/MI_Type__c.field-meta.xml
<CustomField>
    <fullName>MI_Type__c</fullName>
    <label>MI Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Borrower Paid Monthly</fullName>
            </value>
            <value>
                <fullName>Borrower Paid Split MI</fullName>
            </value>
            <value>
                <fullName>Borrower Paid Single Premium</fullName>
            </value>
            <value>
                <fullName>Lender Paid</fullName>
            </value>
            <value>
                <fullName>Financed MI</fullName>
            </value>
            <value>
                <fullName>GOV MIP</fullName>
            </value>
            <value>
                <fullName>MI Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>