force-app/main/default/objects/Transaction__c/fields/Monthly_Mortgage_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Mortgage_Insurance__c</fullName>
    <label>Monthly Mortgage Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>