force-app/main/default/objects/Transaction__c/fields/Monthly_Payment_1st__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_1st__c</fullName>
    <label>Total Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>