force-app/main/default/objects/Transaction__c/fields/Monthly_Payment_2nd__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_2nd__c</fullName>
    <label>Monthly Payment (2nd)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>