force-app/main/default/objects/Transaction__c/fields/Monthly_Payment_and_Interest__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_and_Interest__c</fullName>
    <formula>Loan_Amount_1st__c  *
( (Rate_1st_TD__c/12)  * ((1 + (Rate_1st_TD__c/12))^Term_1st__c)) /
((1 + (Rate_1st_TD__c/12))^Term_1st__c - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P &amp; I</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>