force-app/main/default/objects/Transaction__c/fields/Mortgage_Form_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Form_Insurance__c</fullName>
    <formula>IF(
    AND(
        BEGINS(TEXT(Loan_Type_1st_TD__c), &quot;Conventional&quot;),
        BEGINS(TEXT(MI_Type__c), &quot;Borrower Paid&quot;)
    ),
    Mortgage_Ins_1st_TD__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mortgage Form Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>