force-app/main/default/objects/Transaction__c/fields/Mortgage_Ins_1st_TD__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Ins_1st_TD__c</fullName>
    <label>Mortgage Ins. (monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>