force-app/main/default/objects/Transaction__c/fields/Move_OD_Folder_to_Active__c.field-meta.xml
<CustomField>
    <fullName>Move_OD_Folder_to_Active__c</fullName>
    <label>Move OD Folder to Active</label>
    <type>Date</type>
</CustomField>