force-app/main/default/objects/Transaction__c/fields/Move_One_Drive_folder_Active_to_Closed__c.field-meta.xml
<CustomField>
    <fullName>Move_One_Drive_folder_Active_to_Closed__c</fullName>
    <label>Move One Drive folder - Active to Closed</label>
    <type>DateTime</type>
</CustomField>