force-app/main/default/objects/Transaction__c/fields/Move_OneDrive_File_into_Closed_Loans__c.field-meta.xml
<CustomField>
    <fullName>Move_OneDrive_File_into_Closed_Loans__c</fullName>
    <label>Move OneDrive File into &quot;Closed Loans&quot;</label>
    <type>DateTime</type>
</CustomField>